--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: rgb(var(--background-rgb))
+  background: rgb(var(--background-rgb));
 }
 
 @layer utilities {
@@ -24,3 +24,20 @@ body {
     text-wrap: balance;
   }
 }
+
+/* .table-striped-rows tr:nth-child(2n) td {
+  background-color: #fbfbfb !important;
+}
+.table-striped-rows thead {
+  background-color: #f1f1f1 !important;
+}
+
+.ant-table
+  .ant-table-container
+  .ant-table-content
+  table
+  thead.ant-table-thead
+  .ant-table-cell {
+  background-color: #0054a0 !important;
+  color: white !important;
+} */
